Migrated app to Java v25. Fixed issues with db. Migrated app to use InlineKeyboard in Telegram for participants listing. Migrated tests to don't use assertj by suspicion that it prevents running tests under graalvm.buildtools.native. Fixed native image hints generation.